Right panel, marker on hover anmation; fixed panels
Panels without jQuery Mobile, custom scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,30 @@
   text-shadow: none;
 }
 
+h1 {
+  font-size: 1.5em;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 1em;
+  text-transform: uppercase;
+}
+
+.material-icons {
+  font-family: "Material Icons" !important;
+  font-size: 36px;
+  line-height: 2em;
+  padding-left: 10px;
+}
+
+.material-icons:hover {
+  cursor: pointer;
+  text-shadow: 3px 1px 2px rgba(158, 158, 158, 0.76);
+}
+
+/* Info window formatting */
+
 .iw-place-name,
 .iw-place-type {
   display: inline;
@@ -20,15 +44,7 @@
   margin: 5px 0;
 }
 
-h1 {
-  font-size: 1.5em;
-  text-transform: uppercase;
-}
-
-h2 {
-  font-size: 1em;
-  text-transform: uppercase;
-}
+/* Dimensions, padding and margins */
 
 body {
   width: 100vw;
@@ -36,33 +52,61 @@ body {
 }
 
 #map {
+  width: 100%;
+  height: 100%;
+}
+
+.ui-page {
   width: 100vw;
   height: 100vh;
 }
 
-.panel-opener {
+.panel-opener-left {
   position: fixed;
   top: 0;
   left: 8px;
+  z-index: 1000;
 }
 
-.material-icons {
-  font-family: "Material Icons" !important;
-  font-size: 36px;
-  line-height: 2em;
-  padding-left: 10px;
+.panel-opener-right {
+  position: fixed;
+  top: 0;
+  right: 20px;
+  z-index: 1001;
 }
 
-#side-panel {
+#left-panel,
+#right-panel {
+  height: 100vh;
+  position: fixed;
+  width: 300px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  top: 0;
+  bottom: 0;
   line-height: 2em;
   background-color: #e3eaef;
   border-right: 1px solid #b6c9d9;
-  padding: 0 5px;
+  padding: 15px;
+}
+
+#left-panel {
+  left: -300px;
+  z-index: 2000;
+}
+
+#right-panel {
+  right: -300px;
+  z-index: 2001;
+}
+
+.ui-content {
+  padding: 0;
 }
 
 .coa {
-  width: 30px;
-  height: 36px;
+  width: 50px;
+  height: 60px;
   float: left;
   margin-right: 16px;
 }
@@ -80,8 +124,33 @@ body {
 
 .iw-photo {
   margin: auto;
+  max-width: 400px;
+  max-height: 300px;
 }
 
 .iw-photo-comment {
 
+}
+
+/* Scrollbar (see https://css-tricks.com/examples/WebKitScrollbars/) */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    background: rgba(0,90,200,0.5);
+    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(80,90,200,0.3);
 }
